# Plia

./: .gitignore  Archive_plia.bat  README.md  README_uninstaller_section.md  check_icons.py  config.py  debug_router.py  demo.py  download (1)  generate_training_data.py  icons.txt  main.py  project_info__1.md  project_info__10.md  project_info__11.md  project_info__12.md  project_info__13.md  project_info__14.md  project_info__2.md  project_info__3.md  project_info__4.md  project_info__5.md  project_info__6.md  project_info__7.md  project_info__8.md  project_info__9.md  pyproject.toml  requirements-train.txt  requirements.txt  speed_test.py  test_date_parsing.py  test_drawer.py  test_settings.py  todo_act_mode.md  todo_mcp_client.md  train_function_gemma.py  training_dataset.jsonl  training_dataset_functions.jsonl  uninstall_plia.bat  uninstall_plia.py  (+2 more)
.tmp.driveupload/: 359838  359842  359846  359850  359852  359856  359860  359864  359868  359870  359874  359876  359880  359884  359888  359890  359894  359898  359902  359906  359910  359914  359918  359920  359924  359926  359930  359932  359934  359936  359940  359944  359946  359950  359954  359958  359962  359964  359968  359972  (+4 more)
core/: __init__.py  agent_builder.py  agent_creator.py  agent_registry.py  agent_reporting.py  agent_runtime.py  agent_scheduler.py  agent_state.py  agent_watchers.py  agents.py  calendar_manager.py  calendar_sync.py  clipboard.py  discord_reader.py  email_manager.py  file_ops.py  finance.py  function_executor.py  gpu_info.py  history.py  kasa_control.py  llm.py  mcp_client.py  news.py  (+25 more)
(+132 files in other folders)
