[project]
name = "plia"
version = "0.1.0"
description = "Pocket Local Intelligent Assistant — fully local AI assistant for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.10.0",
    "PySide6-Fluent-Widgets>=1.10.0",
    "requests>=2.32.0",
    "PyYAML>=6.0.0",
    "psutil>=7.0.0",
    "feedparser>=6.0.0",
    "markdown>=3.4.0",
    "pygments>=2.15.0",
    "numpy>=2.0.0",
    "sounddevice>=0.5.0",
    "piper-tts>=1.4.0",
    "realtimestt>=0.3.0",
    "PyAudio>=0.2.14",
    "transformers>=4.57.0",
    "accelerate>=1.12.0",
    "safetensors>=0.7.0",
    "huggingface-hub>=0.36.0",
    "ddgs>=9.13.0",
    "pillow>=10.0.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pynvml>=13.0.0",
]
